--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build",
-    "heroku-build": "cd client && npm run build"
+    "build": "cd client && npm run build"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.10",
-    "apollo-server-express": "^3.3.0"
+    
+    "apollo-server-express": "^3.3.0",
+    "if-env": "^1.0.4"
   }
 }
